Fix horizontal lists on mobile

--- a/src/components/HorizontalList.scss
+++ b/src/components/HorizontalList.scss
@@ -1,7 +1,7 @@
 @import "../config.scss";
 
 .list li {
-	display: inline;
+	display: inline-block;
 	padding-right: $body-font-size;
 
 	&:last-of-type {
